index.css
* { margin:0; padding:0; outline: 0;}
html { min-height: 100%; }
h1,h2,h3,h4,h5,h6 { font-size: 100%; font-weight: normal; }
ol,ul { list-style: none; }
img {border: 0;}
a {text-decoration: none;}

html {
  height: 100%;
  background: #221b13;
}

body {
  position: relative;
  background: #221b13;
  color: #fff;
  -webkit-user-select: text;
  -moz-user-select: text;
  user-select: text;
  pointer-events: text;
  overflow-x: hidden;
  opacity: 0;
  -webkit-overflow-scrolling: touch;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  animation: fade 1.5s forwards;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  text-rendering: optimizeLegibility;
}

@keyframes fade {
  0% { opacity: 0; }
  35% { opacity: 0; }
  100% { opacity: 1; }
}

.canvas {
  position: absolute;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  overflow-x: hidden;
  z-index: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  pointer-events: none;
}

.canvas canvas {
  display: table;
  width: 100%;
  height: 100%;
  opacity: .2;
}

.first-padder {
  display: block;
  width: 100%;
  height: 20vh;
  max-height: 500px;
}

.mid-padder {
  display: block;
  width: 100%;
  height: 7vh;
  max-height: 140px;
}

.last-padder {
  display: block;
  width: 100%;
  height: 10vh;
  max-height: 200px;
}

a {
  position: relative;
  color: #fff;
  bottom: 0px;
  -webkit-transition: .1s linear bottom;
  -moz-transition: .1s linear bottom;
  transition: .1s linear bottom;
}

p a {
  display: inline-block;
}

a:hover {
  bottom: 1px; }
a:active {
  top: 1px; }

a::after {
  content: "";
  position: absolute;
  bottom: 5px; left: 1px;
  width: 100%;
  height: 1px;
  background: #685c58;
  transform-origin: left center;
  -webkit-transform-origin: left center;
  -webkit-transition: .075s linear all;
  -moz-transition: .075s linear all;
  transition: .075s linear all;
}

.grid a::after {
  content: none !important;
}

.grid a {
  display: inline-block;
  max-width: 30%;
  transition: transform 0.3s ease !important;
}

.grid img {
  width: 100%;
}

html.touch a {
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-decoration-color: #717171;
  text-underline-offset: 2px;
}

html.touch a::after {
  display: none;
}

a:hover::after {
  height: 3px;
  bottom: 2px;
  background: rgba(199,104,62,1);
  -webkit-transform: rotate(-1deg);
  -moz-transform: rotate(-1deg);
  transform: rotate(-1deg);
}

.intro {
  position: relative;
  display: block;
  width: calc(100% - 100px);
  height: auto;
  padding: 0 50px;
  margin: 0 auto;
  text-align: center;
  color: #83766d;
}

.container {
  display: inline-block;
  max-width: 500px;
  text-align: left;
  white-space: normal;
  vertical-align: middle;
}

.intro h2 div {
  display: inline;
  color: white;
}

.intro h2 span {
  position: relative;
  color: #fff;
}

.intro h2 span::after {
  content: "";
  position: absolute;
  bottom: 5px; left: 1px;
  width: 100%;
  height: 1px;
  background: #685c58;
}

html.touch .intro h2 span::after {
  display: none;
}

.intro h2 {
  position: relative;
  display: block;
  max-width: 500px;
  margin: 0;
  font-family: 'Metric', sans-serif;
  font-size: 34px;
  line-height: 40px;
  letter-spacing: -0.2px;
  text-align: left;
}

.intro h2 #last {
  display: inline-block;
}

.aboutimage {
  position: absolute;
  left: 100%;
  top: calc(100% - 7px);
  display: block;
  background: transparent no-repeat left top;
  background-position: 50%;
  background-size: 1900% 100%;
  width: 600px;
  height: 340px;
  opacity: 0;
  box-shadow: 0 20px 20px 10px rgba(0,0,0,.2);
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
  pointer-events: none;
  z-index: 100;
}

html.touch .aboutimage {
  display: none;
}

.intro .links {
  position: relative;
  display: block;
  width: 100%;
  max-width: 480px;
  padding-right: 20px;
  margin-top: 24px;
  font-family: 'Metric', sans-serif;
  font-size: 17px;
  line-height: 22px;
  text-align: left;
}

.intro .links span {
  display: inline-block;
  margin-bottom: 5px;
}

.about,
.grid {
  position: relative;
  display: block;
  width: calc(100% - 120px);
  max-width: 480px;
  margin: 0 auto;
  padding: 0 70px 0 50px;
  font-family: 'Metric', sans-serif;
  font-size: 17px;
  line-height: 22px;
  text-align: center;
  color: #83766d;
  z-index: 1;
}

.about p {
  text-align: left;
  margin: 24px 0;
}

.about p:first-child {
  margin-top: 0;
}

.about p:last-child {
  margin-bottom: 0;
}

.gallery {
  position: relative;
  margin: 60px auto 70px auto;
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}

.gallery .image {
  display: block;
  position: absolute;
  top: 0; left: 0;
  width: 100%;
  max-width: 500px;
  max-height: 280px;
  margin: 0 auto;
  box-shadow: 5px 5px 5px rgba(0,0,0,.1);
  border-radius: 10px;
  overflow: hidden;
}

.intro .image {
  position: relative;
  display: block;
  width: 100%;
  max-width: 500px;
  max-height: 280px;
  margin: 0 auto 50px auto;
  box-shadow: 5px 5px 5px rgba(0,0,0,.1);
  border-radius: 10px;
  overflow: hidden;
  z-index: 1;
  line-height: 0;
}

.intro .image video {
  display: block;
  width: 100%;
  max-height: 280px;
  height: auto;
}

.intro .image::after {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  box-shadow: inset 0 0 0 1.5px rgba(131, 118, 109, 0.5);
  pointer-events: none;
  border-radius: 10px;
  z-index: 100;
  opacity: 1;
}

video::-webkit-media-controls {
  display: none;
}

.image img {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  opacity: 1;
  -webkit-transition: 0.2s ease opacity;
  -moz-transition: 0.2s ease opacity;
  transition: 0.2s ease opacity;
}

.gallery .image::after {
  content: "";
  display: block;
  position: absolute;
  top: 0; left: 0;
  width: 100%;
  height: 100%;
  box-shadow: inset 0 0 0 1.5px rgba(131, 118, 109, 0.5);
  border-radius: 10px;
  z-index: 100;
  opacity: 0;
}

.gallery:hover .image img {
  opacity: 0; }
.gallery:hover .image:hover img {
  opacity: 1; }

.gallery:hover .image:hover::after {
  opacity: 0; }
.gallery:hover .image::after {
  opacity: 0.3; }

html.touch .gallery:hover .image img {
  opacity: 1 !important; }

.gallery:nth-of-type(2n-1) .image:nth-child(1) {
  top: 20px;
  left: 40px;
  z-index: 1;
  -webkit-transform: rotate(4deg);
  -moz-transform: rotate(4deg);
  transform: rotate(4deg); }
.gallery:nth-of-type(2n-1) .image:nth-child(2) {
  position: relative;
  z-index: 2;
  -webkit-transform: rotate(2deg);
  -moz-transform: rotate(2deg);
  transform: rotate(2deg); }
.gallery:nth-of-type(2n-1) .image:nth-child(3) {
  top: -20px;
  left: -40px;
  z-index: 3;
  -webkit-transform: rotate(-2deg);
  -moz-transform: rotate(-2deg);
  transform: rotate(-2deg); }

.gallery:nth-of-type(2n) .image:nth-child(1) {
  top: 20px;
  left: -40px;
  z-index: 1;
  -webkit-transform: rotate(-4deg);
  -moz-transform: rotate(-4deg);
  transform: rotate(-4deg); }
.gallery:nth-of-type(2n) .image:nth-child(2) {
  position: relative;
  z-index: 2;
  -webkit-transform: rotate(-2deg);
  -moz-transform: rotate(-2deg);
  transform: rotate(-2deg); }
.gallery:nth-of-type(2n) .image:nth-child(3) {
  top: -20px;
  left: 40px;
  z-index: 3;
  -webkit-transform: rotate(2deg);
  -moz-transform: rotate(2deg);
  transform: rotate(2deg); }

::-webkit-scrollbar {width: 4px; height: 4px;}
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 0 4px rgba(80,80,80,1);
    -webkit-border-radius: 2px;
    border-radius: 2px;}
::-webkit-scrollbar-thumb {
    -webkit-border-radius: 2px;
    border-radius: 2px;
    background: rgba(255,255,255,1);}
::-webkit-scrollbar-corner {
    background-color: transparent;}
::-webkit-scrollbar-button {
    width: 0;
    height: 0;
    display: none;}

::selection {
  background: rgba(255,216,0,.7);
  color: rgba(0,0,0,.7);
  text-shadow: none;
}
::-moz-selection {
  background: rgba(255,216,0,.7);
  color: rgba(0,0,0,.7);
  text-shadow: none;
}

@media (max-width: 1000px) {
  .aboutimage,
  .intro h2 span::after {
    display: none !important;
  }

  .intro h2 span {
    cursor: inherit;
  }
}

@media (max-width: 900px) {
  .first-padder {
    height: 20vh;
    max-height: 400px;
  }

  .last-padder {
    height: 8vh;
    max-height: 160px;
  }
}

@media (max-width: 750px) {
  .first-padder {
    height: 15vh;
    max-height: 300px;
  }

  .mid-padder {
    height: 5vh;
    max-height: 100px;
  }

  .last-padder {
    height: 5vh;
    max-height: 100px;
  }

  .gallery {
    margin: 50px auto 60px auto;
  }

  .gallery:nth-of-type(2n-1) .image:nth-child(1) {
    top: 10px;
    left: 20px; }
  .gallery:nth-of-type(2n-1) .image:nth-child(3) {
    top: -10px;
    left: -20px; }
  .gallery:nth-of-type(2n) .image:nth-child(1) {
    top: 10px;
    left: -20px; }
  .gallery:nth-of-type(2n) .image:nth-child(3) {
    top: -10px;
    left: 20px; }
}

@media (max-width: 600px) {
  .intro {
    box-sizing: border-box;
    padding: 0 35px;
    width: 100%;
  }

  .intro h2 {
    max-width: 380px;
    padding: 0 15px;
    font-size: 24px;
    line-height: 30px;
  }

  .intro .links {
    margin-top: 20px;
    max-width: 380px;
    padding: 0 15px;
  }

  .intro .links,
  .about {
    font-size: 15px;
    line-height: 20px;
  }

  .about,
  .grid {
    max-width: 380px;
    padding: 0 50px;
    width: calc(100% - 100px);
  }

  .about p {
    margin: 20px 0;
    max-width: 380px;
    padding-right: 0;
  }

  .gallery {
    margin: 40px auto 50px auto;
  }
}

@media (max-width: 450px) {
  .first-padder {
    height: 80px;
  }

  .mid-padder {
    height: 60px;
  }

  .last-padder {
    height: 60px;
  }

  .intro .links {
    font-size: 13px;
  }
}

@media (max-width: 350px) {
  .mid-padder {
    height: 40px;
  }

  .last-padder {
    height: 50px;
  }

  .intro {
    padding: 0 40px;
    width: calc(100% - 80px);
  }

  .about,
  .grid {
    padding: 0 40px;
    width: calc(100% - 80px);
  }
}

@font-face {
  font-family: 'Metric';
  src: url('assets/fonts/Metric-Regular.woff') format('woff'), url('assets/fonts/Metric-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal; }

